Align status icon in DM and Fix back icon in admin

--- a/app/theme/client/imports/components/header.css
+++ b/app/theme/client/imports/components/header.css
@@ -477,6 +477,7 @@
 
 		&__status {
 			margin: 0.2rem 0.5rem;
+			align-self: center;
 		}
 
 		&__image {
